# aws-pulumi-http-lambda

./: Pulumi.ENV.yaml  Pulumi.nonprod.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  autotag.py  infra.py  pyproject.toml  requirements.txt  taggable.py
documentation/: architecture.drawio
src/: lambda_function.py
